Make sure black box aligns correctly

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -490,10 +490,10 @@ $wide-width: 1300px;
       .xpl-hero-column-left {
         display: inline-block;
         vertical-align: top;
-        width: 66%;
+        width: 66.666%;
       }
       .home-top__links-outer {
-        width: 33%;
+        width: 33.333%;
         display: inline-block;
         vertical-align: top;
       }
